--- a/MireaProject/app/src/main/res/values/strings.xml
+++ b/MireaProject/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
 
     <string name="menu_dataFragment">Data</string>
     <string name="menu_webViewFragment">Web</string>
+    <string name="menu_notification">Notification</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
