--- a/MireaProject/app/src/main/res/values/strings.xml
+++ b/MireaProject/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="menu_dataFragment">Data</string>
     <string name="menu_webViewFragment">Web</string>
     <string name="menu_notification">Notification</string>
+    <string name="menu_compass">Compass</string>
+    <string name="menu_notes">Notes</string>
+    <string name="menu_microphone">Microphone</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
