--- a/MireaProject/app/src/main/res/values/strings.xml
+++ b/MireaProject/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="menu_compass">Compass</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_microphone">Microphone</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_fileProcessing">File Processing</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
