--- a/MireaProject/app/src/main/res/values/strings.xml
+++ b/MireaProject/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_microphone">Microphone</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_fileProcessing">File Processing</string>
+    <string name="menu_api">Api</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
