--- a/MireaProject/app/src/main/res/values/strings.xml
+++ b/MireaProject/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_profile">Profile</string>
     <string name="menu_fileProcessing">File Processing</string>
     <string name="menu_api">Api</string>
+    <string name="menu_map">Map</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
